no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 6dfbe46a658d5348c9bd0f10f9995eaf3a5467e0

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-bs/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-bs/strings.xml
@@ -4192,13 +4192,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4252,6 +4268,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4270,6 +4302,41 @@ ekstenzije
 nije
 uspjela
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Nije
+mogu
+e
+instalirati
+ekstenziju
 <
 /
 string
@@ -4634,6 +4701,65 @@ ano
 na
 ovoj
 platformi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+kr
+i
+Mozilla
+pravila
+i
+ne
+mo
+e
+se
+instalirati
 .
 <
 /
@@ -5672,6 +5798,42 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Poka
+i
+detalje
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5730,6 +5892,137 @@ za
 sigurnost
 i
 stabilnost
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Ova
+ekstenzija
+kr
+i
+Mozilla
+pravila
+i
+onemogu
+ena
+je
+.
+Mo
+ete
+je
+omogu
+iti
+ali
+ovo
+mo
+e
+biti
+rizi
+no
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Ova
+ekstenzija
+kr
+i
+Mozillinu
+politiku
+.
+Upotreba
+mo
+e
+biti
+rizi
+na
 .
 <
 /
