--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-fa/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-fa/strings.xml
@@ -725,6 +725,115 @@ string
 !
 -
 -
+Content
+description
+for
+a
+permission
+item
+for
+an
+installed
+add
+-
+on
+details
+page
+.
+%
+1
+s
+will
+be
+replaced
+with
+the
+permission
+text
+name
+%
+2
+d
+will
+be
+replaced
+with
+the
+permission
+position
+in
+the
+list
+and
+%
+3
+d
+will
+be
+replaced
+with
+the
+total
+number
+of
+permissions
+in
+the
+list
+.
+Taking
+as
+an
+example
+"
+Read
+and
+modify
+privacy
+settings
+"
+the
+whole
+text
+will
+read
+Read
+and
+modify
+privacy
+settings
+2
+of
+6
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_content_description_item
+"
+>
+%
+1
+s
+%
+2
+d
+%
+3
+d
+<
+/
+string
+>
+<
+!
+-
+-
 Description
 for
 tabs
@@ -1333,7 +1442,7 @@ string
 -
 -
 The
-authors
+author
 of
 an
 add
@@ -1348,7 +1457,7 @@ string
 name
 =
 "
-mozac_feature_addons_authors
+mozac_feature_addons_author
 "
 >
 <
@@ -1480,6 +1589,37 @@ string
 !
 -
 -
+A
+link
+that
+points
+to
+the
+detail
+page
+of
+the
+extension
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_more_info_link_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 The
 settings
 of
@@ -1524,33 +1664,6 @@ name
 =
 "
 mozac_feature_addons_settings_on
-"
->
-<
-/
-string
->
-<
-!
--
--
-Indicates
-the
-add
--
-on
-is
-disabled
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_settings_off
 "
 >
 <
@@ -1623,6 +1736,42 @@ string
 !
 -
 -
+This
+is
+displayed
+when
+the
+add
+-
+on
+is
+not
+allowed
+to
+run
+in
+private
+browsing
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_not_allowed_in_private_browsing
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Indicates
 the
 add
@@ -1640,33 +1789,6 @@ name
 =
 "
 mozac_feature_addons_enabled
-"
->
-<
-/
-string
->
-<
-!
--
--
-Indicates
-the
-add
--
-on
-is
-disabled
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_disabled
 "
 >
 <
@@ -1992,16 +2114,21 @@ string
 -
 This
 is
+a
 button
-that
+to
 remove
 (
+i
+.
+e
+.
 uninstall
+)
 an
 add
 -
 on
-)
 .
 -
 -
@@ -2012,6 +2139,36 @@ name
 =
 "
 mozac_feature_addons_remove
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+a
+button
+to
+report
+an
+add
+-
+on
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_report
 "
 >
 <
@@ -2068,6 +2225,55 @@ mozac_feature_addons_permissions_dialog_title
 %
 1
 s
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+the
+title
+of
+a
+dialog
+that
+asks
+the
+users
+to
+grant
+optional
+permissions
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_optional_permissions_dialog_title
+"
+>
+%
+1
+s
+.
 <
 /
 string
@@ -2143,6 +2349,64 @@ string
 -
 This
 is
+the
+subtitle
+of
+a
+dialog
+that
+asks
+the
+users
+to
+grant
+optional
+permissions
+the
+subtitle
+lists
+the
+permissions
+that
+this
+add
+-
+on
+requests
+the
+permissions
+will
+dynamically
+be
+listed
+after
+the
+"
+:
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_optional_permissions_dialog_subtitle
+"
+>
+:
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
 a
 button
 to
@@ -2164,6 +2428,76 @@ name
 =
 "
 mozac_feature_addons_permissions_dialog_add
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+a
+button
+to
+allow
+the
+optional
+permissions
+requested
+by
+an
+add
+-
+on
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_allow
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+a
+button
+to
+deny
+the
+optional
+permissions
+requested
+by
+an
+add
+-
+on
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_deny
 "
 >
 <
@@ -2215,6 +2549,16 @@ add
 on
 button
 .
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
 -
 -
 >
@@ -2223,9 +2567,12 @@ string
 name
 =
 "
-mozac_feature_addons_install_addon_content_description
+mozac_feature_addons_install_addon_content_description_2
 "
 >
+%
+1
+s
 <
 /
 string
@@ -2337,33 +2684,6 @@ the
 amount
 of
 stars
-and
-/
-separator
-and
-5
-the
-maximum
-number
-of
-stars
-e
-.
-g
-(
-2
-/
-5
-4
-.
-5
-/
-5
-or
-5
-/
-5
-)
 .
 -
 -
@@ -2373,14 +2693,15 @@ string
 name
 =
 "
-mozac_feature_addons_rating_content_description
+mozac_feature_addons_rating_content_description_2
 "
 >
+:
 %
 1
 .
 02f
-/
+of
 5
 <
 /
@@ -2445,6 +2766,131 @@ name
 =
 "
 mozac_feature_addons_addons_manager
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+"
+crash
+"
+notification
+in
+the
+extensions
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_extensions_manager_notification_title_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
+content
+of
+the
+"
+crash
+"
+notification
+in
+the
+extensions
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_extensions_manager_notification_content_text
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+to
+re
+-
+enable
+the
+extensions
+in
+the
+"
+crash
+"
+notification
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_extensions_manager_notification_restart_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+extensions
+manager
+that
+opens
+AMO
+in
+a
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_find_more_extensions_button_text
 "
 >
 <
@@ -2741,9 +3187,7 @@ notification
 for
 updating
 an
-add
--
-on
+extension
 .
 See
 https
@@ -2771,7 +3215,7 @@ string
 name
 =
 "
-mozac_feature_addons_updater_notification_channel
+mozac_feature_addons_updater_notification_channel_2
 "
 >
 <
@@ -2829,6 +3273,13 @@ name
 "
 mozac_feature_addons_supported_checker_notification_channel
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -2869,6 +3320,13 @@ name
 =
 "
 mozac_feature_addons_supported_checker_notification_title
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -2912,6 +3370,13 @@ name
 =
 "
 mozac_feature_addons_supported_checker_notification_title_plural
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -3157,39 +3622,6 @@ string
 name
 =
 "
-mozac_feature_addons_not_yet_supported_caption
-"
->
-Firefox
-.
-Firefox
-.
-<
-/
-string
->
-<
-!
--
--
-This
-is
-the
-caption
-for
-not
-yet
-supported
-screen
-caption
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_addons_not_yet_supported_caption2
 "
 >
@@ -3208,9 +3640,7 @@ the
 caption
 for
 the
-add
--
-on
+extension
 installation
 progress
 overlay
@@ -3222,7 +3652,7 @@ string
 name
 =
 "
-mozac_add_on_install_progress_caption
+mozac_extension_install_progress_caption
 "
 >
 <
@@ -3244,9 +3674,7 @@ trying
 to
 get
 the
-add
--
-on
+extension
 list
 from
 the
@@ -3259,7 +3687,7 @@ string
 name
 =
 "
-mozac_feature_addons_failed_to_query_add_ons
+mozac_feature_addons_failed_to_query_extensions
 "
 >
 !
@@ -3378,13 +3806,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -3410,6 +3854,426 @@ mozac_feature_addons_failed_to_install
 %
 1
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+after
+failing
+to
+install
+an
+extension
+for
+which
+we
+don
+'
+t
+have
+its
+name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+extension
+and
+a
+network
+error
+happened
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_network_error
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+extension
+and
+the
+downloaded
+file
+is
+corrupted
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_corrupt_error
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+and
+an
+error
+occurred
+because
+the
+extension
+was
+not
+signed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_not_signed_error
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+and
+an
+error
+occurred
+because
+the
+extension
+was
+incompatible
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+%
+2
+s
+is
+the
+app
+name
+and
+%
+3
+s
+is
+the
+app
+version
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_failed_to_install_incompatible_error
+"
+>
+%
+1
+s
+%
+2
+s
+%
+3
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+blocklisted
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_1
+"
+>
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+can
+only
+be
+install
+via
+Enterprise
+Policies
+which
+is
+not
+supported
+on
+Android
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_admin_install_only
+"
+>
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+.
 <
 /
 string
@@ -3846,8 +4710,6 @@ add
 -
 ons
 section
-in
-AddonsManagerAdapter
 .
 -
 -
@@ -3857,7 +4719,7 @@ string
 name
 =
 "
-mozac_feature_addons_unsupported_caption
+mozac_feature_addons_unsupported_caption_2
 "
 >
 <
@@ -3878,8 +4740,6 @@ add
 -
 ons
 section
-in
-AddonsManagerAdapter
 -
 plural
 .
@@ -3891,9 +4751,8 @@ the
 number
 of
 unsupported
-add
--
-ons
+extensions
+.
 -
 -
 >
@@ -3902,10 +4761,11 @@ string
 name
 =
 "
-mozac_feature_addons_unsupported_caption_plural
+mozac_feature_addons_unsupported_caption_plural_2
 "
 >
 %
+1
 s
 <
 /
@@ -4279,6 +5139,14 @@ add
 on
 name
 .
+%
+2
+s
+is
+the
+app
+name
+.
 -
 -
 >
@@ -4287,9 +5155,16 @@ string
 name
 =
 "
-mozac_feature_addons_installed_dialog_description
+mozac_feature_addons_installed_dialog_description_2
 "
 >
+%
+1
+s
+%
+2
+s
+.
 <
 /
 string
@@ -4320,9 +5195,369 @@ string
 name
 =
 "
-mozac_feature_addons_installed_dialog_okay_button
+mozac_feature_addons_installed_dialog_okay_button_2
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+"
+Learn
+more
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_learn_more
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted
+"
+>
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Mozilla
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+hasn
+'
+t
+been
+signed
+correctly
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_unsigned
+"
+>
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+isn
+'
+t
+compatible
+with
+the
+application
+version
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+%
+2
+s
+is
+the
+app
+name
+and
+%
+3
+s
+is
+the
+app
+version
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_incompatible
+"
+>
+%
+1
+s
+%
+2
+s
+(
+%
+3
+s
+)
+.
 <
 /
 string
