--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sat/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sat/strings.xml
@@ -4234,6 +4234,56 @@ string
 -
 Text
 shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+Mozilla
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
 after
 successfully
 enabled
@@ -5269,6 +5319,103 @@ mozac_feature_addons_status_blocklisted
 >
 %
 1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Mozilla
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Mozilla
 s
 <
 /
