--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-bs/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-bs/strings.xml
@@ -347,53 +347,6 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_save
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Nemoj
-spasiti
-<
-/
-string
->
-<
-!
--
--
-Negative
-confirmation
-that
-we
-should
-not
-save
-the
-new
-or
-updated
-login
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_dont_save_2
 "
 >
@@ -525,52 +478,6 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_update
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Nemoj
-a
-urirati
-<
-/
-string
->
-<
-!
--
--
-Negative
-confirmation
-that
-we
-should
-not
-save
-the
-updated
-login
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_dont_update_2
 "
 >
@@ -636,116 +543,11 @@ string
 name
 =
 "
-mozac_feature_prompt_error_empty_password
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Polje
-za
-lozinku
-ne
-smije
-biti
-prazno
-<
-/
-string
->
-<
-!
--
--
-Error
-text
-displayed
-underneath
-the
-password
-field
-when
-it
-is
-in
-an
-error
-case
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_error_empty_password_2
 "
 >
 Unesite
 lozinku
-<
-/
-string
->
-<
-!
--
--
-Error
-text
-displayed
-underneath
-the
-login
-field
-when
-it
-is
-in
-an
-error
-case
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_error_unknown_cause
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ne
-mogu
-spasiti
-prijavu
 <
 /
 string
@@ -785,69 +587,6 @@ e
 sa
 uvati
 lozinku
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-new
-username
-and
-password
-and
-user
-decides
-if
-app
-should
-save
-the
-new
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_save_headline
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Spasi
-ovu
-prijavu
-?
 <
 /
 string
@@ -930,71 +669,6 @@ app
 should
 update
 the
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_update_headline
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-A
-urirati
-ovu
-prijavu
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-new
-password
-for
-an
-existing
-login
-and
-user
-decides
-if
-app
-should
-update
-the
 password
 .
 -
@@ -1010,77 +684,6 @@ mozac_feature_prompt_login_update_headline_2
 >
 A
 urirati
-lozinku
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-username
-for
-an
-existing
-login
-without
-a
-username
-and
-user
-decides
-if
-app
-should
-update
-the
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_add_username_headline
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Dodaj
-korisni
-ko
-ime
-uz
-sa
-uvanu
 lozinku
 ?
 <
@@ -2023,52 +1626,6 @@ Option
 in
 expanded
 select
-login
-prompt
-that
-links
-to
-login
-settings
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_manage_logins
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Upravljanje
-prijavama
-<
-/
-string
->
-<
-!
--
--
-Option
-in
-expanded
-select
 password
 prompt
 that
@@ -2089,57 +1646,6 @@ mozac_feature_prompts_manage_logins_2
 >
 Upravljajte
 lozinkama
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_logins_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Pro
-iri
-predlo
-ene
-prijave
 <
 /
 string
@@ -2191,57 +1697,6 @@ for
 collapsing
 the
 saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_logins_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Sa
-mi
-predlo
-ene
-prijave
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-saved
 passwords
 options
 in
@@ -2265,59 +1720,6 @@ mi
 sa
 uvane
 lozinke
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-select
-login
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-login
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_saved_logins
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Predlo
-ene
-prijave
 <
 /
 string
@@ -2394,62 +1796,6 @@ name
 =
 "
 mozac_feature_prompts_suggest_strong_password_content_description
-"
->
-Predlo
-i
-jaku
-lozinku
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-suggest
-strong
-password
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-suggested
-strong
-password
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_suggest_strong_password
-"
-moz
-:
-removedIn
-=
-"
-128
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Predlo
@@ -2600,14 +1946,14 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description
+mozac_feature_prompts_suggest_strong_password_description_2
 "
 moz
 :
 removedIn
 =
 "
-130
+133
 "
 tools
 :
@@ -2630,21 +1976,19 @@ no
 generisane
 lozinke
 .
-Dobijte
-brzi
-pristup
-svojim
-lozinkama
-tako
-to
-ete
-ih
+Bit
+e
 sa
-uvati
+uvan
 na
-svoj
+va
+em
 ra
-un
+unu
+za
+budu
+u
+upotrebu
 .
 <
 /
@@ -2671,14 +2015,14 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description_2
+mozac_feature_prompts_suggest_strong_password_description_3
 "
 >
 Za
 titite
 svoje
 ra
-une
+un
 kori
 tenjem
 jake
@@ -2690,7 +2034,7 @@ lozinke
 Bit
 e
 sa
-uvan
+uvana
 na
 va
 em
@@ -3024,62 +2368,6 @@ Header
 for
 the
 select
-credit
-card
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-credit
-card
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_select_credit_card
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Odaberite
-kreditnu
-karticu
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-select
 card
 prompt
 to
@@ -3109,61 +2397,6 @@ Koristi
 sa
 uvanu
 karticu
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-select
-credit
-card
-options
-in
-the
-select
-credit
-card
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_credit_cards_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Pro
-irite
-predlo
-ene
-kreditne
-kartice
 <
 /
 string
@@ -3215,60 +2448,6 @@ description
 for
 collapsing
 the
-select
-credit
-card
-options
-in
-the
-select
-credit
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_credit_cards_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Sa
-mi
-predlo
-ene
-kreditne
-kartice
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
 saved
 card
 options
@@ -3293,57 +2472,6 @@ mi
 sa
 uvane
 kartice
-<
-/
-string
->
-<
-!
--
--
-Option
-in
-the
-expanded
-select
-credit
-card
-prompt
-that
-links
-to
-credit
-cards
-settings
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_manage_credit_cards
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Upravljaj
-kreditnim
-karticama
 <
 /
 string
@@ -3466,66 +2594,6 @@ the
 title
 of
 the
-save
-credit
-card
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_save_credit_card_prompt_body
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Broj
-kartice
-e
-biti
-ifrovan
-.
-Sigurnosni
-kod
-ne
-e
-biti
-sa
-uvan
-.
-<
-/
-string
->
-<
-!
--
--
-Subtitle
-text
-displayed
-under
-the
-title
-of
-the
 saved
 card
 dialog
@@ -3626,58 +2694,6 @@ description
 for
 expanding
 the
-select
-addresses
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_address_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Pro
-irite
-predlo
-ene
-adrese
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
 saved
 addresses
 options
@@ -3702,58 +2718,6 @@ Pro
 iri
 sa
 uvane
-adrese
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-select
-address
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_address_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Sa
-mi
-predlo
-ene
 adrese
 <
 /
@@ -4072,6 +3036,13 @@ name
 =
 "
 mozac_feature_prompts_identity_credentials_privacy_policy_description
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
