--- a/mobile/android/android-components/components/feature/search/src/main/res/values-ab/strings.xml
+++ b/mobile/android/android-components/components/feature/search/src/main/res/values-ab/strings.xml
@@ -95,6 +95,64 @@ search_widget_text_short
 string
 >
 <
+!
+-
+-
+Text
+preview
+for
+larger
+sized
+widgets
+-
+-
+>
+<
+string
+name
+=
+"
+search_widget_text_long
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Voice
+search
+-
+-
+>
+<
+string
+name
+=
+"
+search_widget_voice
+"
+>
+<
+/
+string
+>
+<
 /
 resources
 >
