--- a/mobile/android/fenix/app/src/main/res/values-bs/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-bs/strings.xml
@@ -1626,6 +1626,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Na
 a
@@ -1677,6 +1691,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Saznajte
@@ -2048,6 +2076,20 @@ name
 "
 tablet_nav_bar_cfr_title
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Novo
 :
@@ -2091,6 +2133,20 @@ name
 =
 "
 tablet_nav_bar_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 U
@@ -3491,6 +3547,162 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Section
+heading
+for
+recommended
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_recommended_section_content_description
+"
+>
+Preporu
+ena
+ekstenzija
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+Dodaj
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description
+"
+moz
+:
+removedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Dodaj
+ekstenziju
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
@@ -3852,6 +4064,63 @@ na
 po
 etni
 ekran
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+notifying
+users
+that
+Xiaomi
+devices
+require
+additional
+permissions
+to
+add
+to
+home
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_add_to_homescreen_xiaomi
+"
+>
+Xiaomi
+ure
+ajima
+e
+mo
+da
+trebati
+dodatna
+odobrenja
+za
+dodavanje
+pre
+ica
+na
+po
+etni
+ekran
+.
+Molimo
+provjerite
+svoje
+postavke
+.
 <
 /
 string
@@ -4998,9 +5267,9 @@ etc
 Back
 button
 for
-the
-page
-tools
+all
+menu
+redesign
 sub
 -
 menu
@@ -6582,6 +6851,13 @@ name
 =
 "
 onboarding_home_screen_jump_back_contextual_hint_2
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 >
 Upoznajte
@@ -15330,6 +15606,79 @@ string
 !
 -
 -
+Preference
+switch
+title
+for
+automatically
+submitting
+crash
+reports
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_automatically_submit_crashes_title
+"
+>
+Automatski
+slati
+izvje
+taje
+o
+padu
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+switch
+description
+for
+automatically
+submitting
+crash
+reports
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_automatically_submit_crashes_description
+"
+>
+Automatski
+dijeli
+podatke
+o
+padu
+prilikom
+pokretanja
+s
+Mozilla
+-
+om
+nakon
+pada
+<
+/
+string
+>
+<
+!
+-
+-
 Title
 for
 studies
@@ -19729,6 +20078,151 @@ string
 !
 -
 -
+Unsubmitted
+crash
+dialog
+title
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+(
+e
+.
+g
+.
+Firefox
+)
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_title
+"
+>
+%
+s
+se
+morao
+ponovo
+pokrenuti
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+checkbox
+label
+for
+automatically
+sending
+reports
+in
+the
+future
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_checkbox_label
+"
+>
+Automatski
+alji
+izvje
+taje
+o
+padu
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+negative
+button
+to
+dismiss
+the
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_negative_button
+"
+>
+Zatvori
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+positive
+button
+to
+submit
+crash
+report
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_positive_button
+"
+>
+Po
+alji
+izvje
+taj
+o
+padu
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmarks
 -
 -
@@ -20910,6 +21404,20 @@ name
 "
 bookmark_close_button_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+130
+"
 >
 Zatvori
 oznake
@@ -20987,6 +21495,222 @@ menija
 za
 %
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+bookmark
+list
+empty
+state
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_title
+"
+>
+Jo
+nema
+oznaka
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+not
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_description
+"
+>
+Spremite
+web
+stranice
+dok
+pretra
+ujete
+.
+Prijavite
+se
+da
+preuzmete
+oznake
+sa
+drugih
+sinhronizovanih
+ure
+aja
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+button
+to
+navigate
+to
+sync
+authentication
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_cta
+"
+>
+Prijavite
+se
+za
+sinhronizaciju
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_authenticated_description
+"
+>
+Spremite
+web
+stranice
+dok
+pretra
+ujete
+.
+Tako
+er
+emo
+preuzeti
+oznake
+s
+drugih
+sinhroniziranih
+ure
+aja
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+in
+an
+empty
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_folder_description
+"
+>
+Dodajte
+oznake
+dok
+pretra
+ujete
+kako
+biste
+kasnije
+mogli
+prona
+i
+svoje
+omiljene
+stranice
+.
 <
 /
 string
@@ -42033,6 +42757,20 @@ name
 "
 review_quality_check_first_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Saznajte
 mo
@@ -42085,6 +42823,13 @@ name
 "
 review_quality_check_first_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -42126,6 +42871,20 @@ name
 =
 "
 review_quality_check_second_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Jesu
@@ -42179,6 +42938,13 @@ name
 =
 "
 review_quality_check_second_cfr_action
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 tools
 :
@@ -49288,6 +50054,39 @@ string
 !
 -
 -
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_8
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ne
+koristim
+sinhronizaciju
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 shown
 in
@@ -49414,6 +50213,122 @@ bolje
 Traje
 samo
 sekund
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+search
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Pomozite
+da
+pretraga
+u
+Firefoxu
+bude
+bolja
+.
+Traje
+samo
+minut
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+sync
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Pomozite
+da
+sinhronizacija
+u
+Firefoxu
+bude
+bolja
+.
+Traje
+samo
+minut
 <
 /
 string
@@ -49584,6 +50499,64 @@ zadovoljni
 iskustvom
 pretra
 ivanja
+u
+Firefoxu
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+sync
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Koliko
+ste
+zadovoljni
+iskustvom
+sinhronizacije
 u
 Firefoxu
 ?
@@ -50049,6 +51022,48 @@ Resetuj
 CFR
 -
 ove
+<
+/
+string
+>
+<
+!
+-
+-
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Glean
+alati
+za
+otklanjanje
+gre
+aka
 <
 /
 string
