--- a/mobile/android/fenix/app/src/main/res/values-sat/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sat/strings.xml
@@ -1421,6 +1421,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -1456,6 +1470,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -1740,6 +1768,20 @@ name
 "
 tablet_nav_bar_cfr_title
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -1775,6 +1817,20 @@ name
 =
 "
 tablet_nav_bar_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -3008,6 +3064,156 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Section
+heading
+for
+recommended
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_recommended_section_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description
+"
+moz
+:
+removedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
@@ -3337,6 +3543,41 @@ name
 browser_menu_add_to_homescreen_2
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+notifying
+users
+that
+Xiaomi
+devices
+require
+additional
+permissions
+to
+add
+to
+home
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_add_to_homescreen_xiaomi
+"
+>
+Xiaomi
 <
 /
 string
@@ -4399,9 +4640,9 @@ etc
 Back
 button
 for
-the
-page
-tools
+all
+menu
+redesign
 sub
 -
 menu
@@ -5827,6 +6068,13 @@ name
 =
 "
 onboarding_home_screen_jump_back_contextual_hint_2
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 >
 <
@@ -8579,68 +8827,6 @@ name
 "
 cookie_banner_handling_details_site_is_not_supported_request_support_button_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-request
-support
-button
-indicating
-that
-cookie
-banner
-reduction
-is
-not
-supported
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-details
-view
-.
--
--
->
-<
-string
-name
-=
-"
-cookie_banner_handling_details_site_is_not_supported_request_support_button_3
-"
 >
 <
 /
@@ -8687,78 +8873,8 @@ name
 "
 cookie_banner_handling_details_site_is_not_supported_title_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 ?
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-title
-indicating
-that
-cookie
-banner
-reduction
-is
-not
-supported
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-details
-view
-.
-The
-first
-parameter
-is
-the
-application
-name
--
--
->
-<
-string
-name
-=
-"
-cookie_banner_handling_details_site_is_not_supported_title_3
-"
->
-%
-1
-s
 <
 /
 string
@@ -8940,66 +9056,6 @@ name
 =
 "
 reduce_cookie_banner_unsupported_site
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-indicating
-cookie
-banner
-handling
-is
-currently
-not
-supported
-for
-this
-site
-this
-is
-shown
-as
-part
-of
-the
-protections
-panel
-with
-the
-tracking
-protection
-toggle
--
--
->
-<
-string
-name
-=
-"
-reduce_cookie_banner_unsupported_site_1
 "
 >
 <
@@ -9183,75 +9239,10 @@ name
 "
 reduce_cookie_banner_details_panel_title_unsupported_site_request_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 %
 1
 s
-<
-/
-string
->
-<
-!
--
--
-Title
-text
-for
-a
-detail
-explanation
-indicating
-cookie
-banner
-reducer
-didn
-'
-t
-work
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-panel
-in
-the
-toolbar
-.
--
--
->
-<
-string
-name
-=
-"
-reduce_cookie_banner_details_panel_title_unsupported_site_request_3
-"
->
 <
 /
 string
@@ -13603,6 +13594,61 @@ string
 !
 -
 -
+Preference
+switch
+title
+for
+automatically
+submitting
+crash
+reports
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_automatically_submit_crashes_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+switch
+description
+for
+automatically
+submitting
+crash
+reports
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_automatically_submit_crashes_description
+"
+>
+Mozilla
+<
+/
+string
+>
+<
+!
+-
+-
 Title
 for
 studies
@@ -17622,6 +17668,134 @@ string
 !
 -
 -
+Unsubmitted
+crash
+dialog
+title
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+(
+e
+.
+g
+.
+Firefox
+)
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_title
+"
+>
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+checkbox
+label
+for
+automatically
+sending
+reports
+in
+the
+future
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_checkbox_label
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+negative
+button
+to
+dismiss
+the
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_negative_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+positive
+button
+to
+submit
+crash
+report
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_positive_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmarks
 -
 -
@@ -18262,6 +18436,37 @@ string
 !
 -
 -
+Text
+indicating
+which
+folder
+a
+bookmark
+or
+folder
+will
+be
+saved
+in
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_save_in_label
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmark
 NAME
 editing
@@ -18276,6 +18481,37 @@ name
 =
 "
 bookmark_name_label
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+a
+text
+input
+field
+for
+a
+bookmark
+or
+folder
+name
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_name_label_normal_case
 "
 >
 <
@@ -18642,6 +18878,20 @@ name
 "
 bookmark_close_button_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+130
+"
 >
 <
 /
@@ -18711,6 +18961,165 @@ bookmark_item_menu_button_content_description
 >
 %
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+bookmark
+list
+empty
+state
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_title
+"
+>
+-
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+not
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+button
+to
+navigate
+to
+sync
+authentication
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_cta
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_authenticated_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+in
+an
+empty
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_folder_description
+"
+>
 <
 /
 string
@@ -37044,6 +37453,20 @@ name
 "
 review_quality_check_first_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -37083,6 +37506,13 @@ name
 "
 review_quality_check_first_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -37120,6 +37550,20 @@ name
 =
 "
 review_quality_check_second_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 ?
@@ -37160,6 +37604,13 @@ name
 =
 "
 review_quality_check_second_cfr_action
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 tools
 :
@@ -43606,6 +44057,81 @@ string
 !
 -
 -
+Option
+for
+likert
+scale
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_7
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_8
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 shown
 in
@@ -43726,7 +44252,9 @@ string
 Text
 shown
 in
-prompt
+the
+survey
+title
 for
 printing
 microsurvey
@@ -43775,7 +44303,9 @@ string
 Text
 shown
 in
-prompt
+the
+survey
+title
 for
 homepage
 microsurvey
@@ -44291,6 +44821,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -44323,6 +44867,20 @@ name
 =
 "
 exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
