--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-ab/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-ab/strings.xml
@@ -56,6 +56,1752 @@ tools
 !
 -
 -
+Text
+for
+confirmation
+for
+a
+positive
+action
+in
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_ok
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+confirmation
+for
+a
+negative
+action
+in
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_cancel
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+When
+a
+page
+shows
+many
+dialogs
+this
+checkbox
+will
+appear
+for
+letting
+the
+user
+choose
+to
+prevent
+showing
+more
+dialogs
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_no_more_dialogs
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+a
+positive
+button
+when
+an
+user
+selects
+a
+date
+in
+date
+/
+time
+picker
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_set_date
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+a
+button
+that
+clears
+the
+selected
+input
+in
+the
+date
+/
+time
+picker
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_clear
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+title
+of
+an
+authentication
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_sign_in
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+username
+field
+in
+an
+authentication
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_username_hint
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+password
+field
+in
+an
+authentication
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_password_hint
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Negative
+confirmation
+that
+we
+should
+not
+save
+the
+new
+or
+updated
+login
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_dont_save_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Negative
+confirmation
+that
+we
+should
+never
+save
+a
+login
+for
+this
+site
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_never_save
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Negative
+confirmation
+that
+we
+should
+not
+save
+a
+credit
+card
+for
+this
+site
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_not_now
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Positive
+confirmation
+that
+we
+should
+save
+the
+new
+or
+updated
+login
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_save_confirmation
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Negative
+confirmation
+that
+we
+should
+not
+save
+the
+updated
+login
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_dont_update_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Positive
+confirmation
+that
+we
+should
+save
+the
+updated
+login
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_update_confirmation
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Error
+text
+displayed
+underneath
+the
+password
+field
+when
+it
+is
+in
+an
+error
+case
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_error_empty_password_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Error
+text
+displayed
+underneath
+the
+password
+field
+when
+it
+is
+in
+an
+error
+case
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_error_unknown_cause_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Prompt
+message
+displayed
+when
+app
+detects
+a
+user
+has
+entered
+a
+new
+username
+and
+password
+and
+user
+decides
+if
+app
+should
+save
+the
+new
+password
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_login_save_headline_2
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Prompt
+message
+displayed
+when
+app
+detects
+a
+user
+has
+entered
+a
+new
+password
+for
+an
+existing
+login
+and
+user
+decides
+if
+app
+should
+update
+the
+password
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_login_update_headline_2
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Prompt
+message
+displayed
+when
+app
+detects
+a
+user
+has
+entered
+a
+username
+for
+an
+existing
+login
+without
+a
+username
+and
+user
+decides
+if
+app
+should
+update
+the
+login
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_login_add_username_headline_2
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+a
+label
+for
+the
+field
+when
+prompt
+requesting
+a
+text
+is
+shown
+.
+-
+-
+>
+<
+!
+-
+-
+For
+more
+info
+take
+a
+look
+here
+https
+:
+/
+/
+developer
+.
+mozilla
+.
+org
+/
+en
+-
+US
+/
+docs
+/
+Web
+/
+API
+/
+Window
+/
+prompt
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_content_description_input_label
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+a
+color
+picker
+dialog
+this
+text
+is
+shown
+above
+a
+color
+picker
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_choose_a_color
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+of
+a
+confirm
+button
+in
+dialog
+requesting
+to
+open
+a
+new
+window
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_allow
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+of
+a
+negative
+button
+in
+dialog
+requesting
+to
+open
+a
+new
+window
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_deny
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+the
+dialog
+shown
+when
+a
+user
+is
+leaving
+a
+website
+and
+there
+is
+still
+data
+not
+saved
+yet
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_before_unload_dialog_title
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Body
+text
+of
+the
+dialog
+shown
+when
+a
+user
+is
+leaving
+a
+website
+and
+there
+is
+still
+data
+not
+saved
+yet
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_before_unload_dialog_body
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Stay
+button
+of
+the
+dialog
+shown
+when
+a
+user
+is
+leaving
+a
+website
+and
+there
+is
+still
+data
+not
+saved
+yet
+this
+indicates
+that
+the
+user
+wants
+to
+stay
+in
+the
+website
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_before_unload_stay
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Leave
+button
+of
+the
+dialog
+shown
+when
+a
+user
+is
+leaving
+a
+website
+and
+there
+is
+still
+data
+not
+saved
+yet
+this
+indicates
+that
+the
+user
+wants
+to
+leave
+in
+the
+website
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_before_unload_leave
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_set_month
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+January
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_jan
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+February
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_feb
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+March
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_mar
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+April
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_apr
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+May
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_may
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+June
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_jun
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+July
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_jul
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+August
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_aug
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+September
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_sep
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+October
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_oct
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+November
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_nov
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+December
+month
+of
+the
+year
+(
+short
+description
+)
+used
+on
+the
+month
+chooser
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_dec
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+the
+time
+picker
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_set_time
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+in
+expanded
+select
+password
+prompt
+that
+links
+to
+password
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_manage_logins_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+expanding
+the
+saved
+passwords
+options
+in
+the
+select
+password
+prompt
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_expand_logins_content_description_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+collapsing
+the
+saved
+passwords
+options
+in
+the
+select
+password
+prompt
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_collapse_logins_content_description_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Header
+for
+the
+select
+password
+prompt
+to
+allow
+users
+to
+fill
+a
+form
+with
+a
+saved
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_saved_logins_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+suggest
+strong
+password
+prompt
+to
+allow
+users
+to
+fill
+a
+form
+with
+a
+suggested
+strong
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Header
+for
+the
+suggest
+strong
+password
+prompt
+to
+allow
+users
+to
+fill
+a
+form
+with
+a
+suggested
+strong
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+using
+the
+suggest
+strong
+password
+confirmation
+dialog
+.
+%
+1
+s
+will
+be
+replaced
+with
+the
+generated
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_message
+"
+>
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+using
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_title
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
 Content
 description
 for
