--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-fa/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-fa/strings.xml
@@ -329,7 +329,7 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_save
+mozac_feature_prompt_dont_save_2
 "
 >
 <
@@ -451,7 +451,7 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_update
+mozac_feature_prompt_dont_update_2
 "
 >
 <
@@ -512,7 +512,7 @@ string
 name
 =
 "
-mozac_feature_prompt_error_empty_password
+mozac_feature_prompt_error_empty_password_2
 "
 >
 <
@@ -545,7 +545,7 @@ string
 name
 =
 "
-mozac_feature_prompt_error_unknown_cause
+mozac_feature_prompt_error_unknown_cause_2
 "
 >
 <
@@ -580,7 +580,7 @@ should
 save
 the
 new
-login
+password
 .
 -
 -
@@ -590,7 +590,7 @@ string
 name
 =
 "
-mozac_feature_prompt_login_save_headline
+mozac_feature_prompt_login_save_headline_2
 "
 >
 <
@@ -626,7 +626,7 @@ app
 should
 update
 the
-login
+password
 .
 -
 -
@@ -636,7 +636,7 @@ string
 name
 =
 "
-mozac_feature_prompt_login_update_headline
+mozac_feature_prompt_login_update_headline_2
 "
 >
 <
@@ -684,7 +684,7 @@ string
 name
 =
 "
-mozac_feature_prompt_login_add_username_headline
+mozac_feature_prompt_login_add_username_headline_2
 "
 >
 <
@@ -1523,12 +1523,12 @@ Option
 in
 expanded
 select
-login
+password
 prompt
 that
 links
 to
-login
+password
 settings
 -
 -
@@ -1538,71 +1538,7 @@ string
 name
 =
 "
-mozac_feature_prompts_manage_logins
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_logins_content_description
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_logins_content_description
+mozac_feature_prompts_manage_logins_2
 "
 >
 <
@@ -1617,7 +1553,7 @@ Header
 for
 the
 select
-login
+password
 prompt
 to
 allow
@@ -1629,7 +1565,7 @@ form
 with
 a
 saved
-login
+password
 -
 -
 >
@@ -1638,7 +1574,369 @@ string
 name
 =
 "
-mozac_feature_prompts_saved_logins
+mozac_feature_prompts_saved_logins_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+suggest
+strong
+password
+prompt
+to
+allow
+users
+to
+fill
+a
+form
+with
+a
+suggested
+strong
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Header
+for
+the
+suggest
+strong
+password
+prompt
+to
+allow
+users
+to
+fill
+a
+form
+with
+a
+suggested
+strong
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+using
+the
+suggest
+strong
+password
+confirmation
+dialog
+.
+%
+1
+s
+will
+be
+replaced
+with
+the
+generated
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_message
+"
+>
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+using
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_description_2
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_description_3
+"
+>
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Pressing
+this
+will
+use
+the
+suggested
+strong
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_use_password
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Pressing
+this
+will
+dismiss
+the
+suggested
+strong
+password
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_dismiss
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+showing
+the
+suggest
+strong
+password
+saved
+confirmation
+snackbar
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_saved_snackbar_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+showing
+the
+suggest
+strong
+password
+updated
+confirmation
+snackbar
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_updated_snackbar_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+showing
+the
+username
+updated
+confirmation
+snackbar
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_login_snackbar_username_updated
 "
 >
 <
@@ -1762,136 +2060,16 @@ string
 !
 -
 -
-Credit
-Card
-Autofill
--
--
->
-<
-!
--
--
-Header
-for
-the
-select
-credit
-card
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-credit
-card
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_select_credit_card
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-select
-credit
-card
-options
-in
-the
-select
-credit
-card
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_credit_cards_content_description
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-select
-credit
-card
-options
-in
-the
-select
-credit
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_credit_cards_content_description
-"
->
-<
-/
-string
->
-<
-!
--
--
 Option
 in
 the
 expanded
 select
-credit
 card
 prompt
 that
 links
 to
-credit
 cards
 settings
 .
@@ -1903,7 +2081,7 @@ string
 name
 =
 "
-mozac_feature_prompts_manage_credit_cards
+mozac_feature_prompts_manage_credit_cards_2
 "
 >
 <
@@ -1974,40 +2152,6 @@ string
 !
 -
 -
-Subtitle
-text
-displayed
-under
-the
-title
-of
-the
-save
-credit
-card
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_save_credit_card_prompt_body
-"
->
-.
-.
-<
-/
-string
->
-<
-!
--
--
 Address
 Autofill
 -
@@ -2044,72 +2188,6 @@ name
 =
 "
 mozac_feature_prompts_select_address_2
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-select
-addresses
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_address_content_description
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-select
-address
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_address_content_description
 "
 >
 <
@@ -2195,7 +2273,7 @@ Identity
 Credential
 provider
 dialog
-choose
+chooser
 .
 -
 -
@@ -2208,6 +2286,51 @@ name
 mozac_feature_prompts_identity_credentials_choose_provider
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+an
+account
+picker
+dialog
+for
+identity
+credentials
+.
+The
+%
+1
+s
+will
+be
+replaced
+with
+the
+name
+of
+the
+provider
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_choose_account_for_provider
+"
+>
+%
+1
+s
 <
 /
 string
@@ -2328,6 +2451,13 @@ name
 "
 mozac_feature_prompts_identity_credentials_privacy_policy_description
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -2370,6 +2500,66 @@ a
 >
 ]
 ]
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+positive
+button
+of
+the
+Identity
+Credential
+dialogs
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_continue
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+cancel
+button
+of
+the
+Identity
+Credential
+dialogs
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_cancel
+"
 >
 <
 /
