--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-ab/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-ab/strings.xml
@@ -24,6 +24,166 @@ resources
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+with
+1
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray_single
+"
+>
+1
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+with
+multiple
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray_plural
+"
+>
+:
+%
+1
+s
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
+creates
+a
+new
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_menu_new_tab
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
+creates
+a
+private
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_menu_new_private_tab
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+to
+close
+tab
+.
+Closes
+the
+current
+session
+when
+pressed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_close_tab
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Menu
 option
 to
