--- a/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
@@ -2097,6 +2097,209 @@ string
 Text
 for
 the
+message
+displayed
+for
+the
+popup
+promoting
+the
+long
+press
+of
+navigation
+in
+the
+navigation
+bar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+navbar_navigation_buttons_cfr_message
+"
+>
+Thoir
+gnogag
+air
+na
+saighdean
+is
+c
+m
+iad
+airson
+leum
+a
+ghearradh
+eadar
+duilleagan
+eachdraidh
+an
+taba
+seo
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Tablet
+navigation
+bar
+"
+contextual
+feature
+recommendation
+"
+(
+CFR
+)
+-
+-
+>
+<
+!
+-
+-
+Text
+for
+the
+title
+displayed
+in
+the
+contextual
+feature
+recommendation
+popup
+promoting
+the
+tablet
+navigation
+bar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tablet_nav_bar_cfr_title
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+r
+:
+saighdean
+airson
+gluasad
+air
+ais
+is
+air
+adhart
+le
+aon
+ghnogag
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+message
+displayed
+in
+the
+contextual
+feature
+recommendation
+popup
+promoting
+the
+tablet
+navigation
+bar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tablet_nav_bar_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Se
+ladaireachd
+nas
+luaithe
+deas
+ri
+do
+l
+imh
+an
+-
+c
+mhnaidh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
 info
 dialog
 when
@@ -2719,6 +2922,34 @@ string
 !
 -
 -
+Shortcut
+action
+to
+open
+Passwords
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+home_screen_shortcut_passwords
+"
+>
+Faclan
+-
+faire
+<
+/
+string
+>
+<
+!
+-
+-
 Recent
 Tabs
 -
@@ -3316,6 +3547,455 @@ menu
 button
 that
 opens
+the
+extensions
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extensions
+"
+>
+Leudachain
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+header
+text
+for
+extensions
+onboarding
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+defined
+in
+app_name
+(
+for
+example
+:
+Fenix
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extensions_banner_onboarding_header
+"
+>
+Thoir
+dreach
+pearsanta
+air
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+defined
+in
+app_name
+(
+for
+example
+:
+Fenix
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extensions_banner_onboarding_body
+"
+>
+Cuiridh
+leudachain
+comasan
+a
+bharrachd
+ris
+a
+bhrabhsadh
+a
+n
+thu
+eadar
+dreach
+is
+l
+imhseachadh
+%
+s
+agus
+pr
+obhaideachd
+is
+s
+bhailteachd
+a
+bharrachd
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+link
+text
+for
+learning
+more
+about
+extensions
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extensions_banner_learn_more
+"
+>
+Barrachd
+fiosrachaidh
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
+opens
+the
+extensions
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_manage_extensions
+"
+>
+Sti
+irich
+na
+leudachain
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Section
+heading
+for
+recommended
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_recommended_section_content_description
+"
+>
+Leudachain
+a
+mholamaid
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+Cuir
+%
+1
+s
+ris
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description
+"
+moz
+:
+removedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Cuir
+leudachan
+ris
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
+opens
+AMO
+in
+a
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_discover_more_extensions
+"
+>
+Fidir
+barrachd
+leudachan
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+description
+that
+is
+shown
+when
+one
+or
+more
+extensions
+are
+disabled
+due
+to
+extension
+errors
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extensions_disabled_description
+"
+>
+comas
+an
+-
+dr
+sta
+fh
+in
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
+opens
 account
 settings
 -
@@ -3499,6 +4179,42 @@ string
 -
 Browser
 menu
+button
+that
+reopens
+a
+private
+tab
+as
+a
+regular
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_open_in_regular_tab
+"
+>
+Fosgail
+ann
+an
+taba
+bhaisteach
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
 toggle
 that
 adds
@@ -3531,6 +4247,113 @@ sgr
 n
 mh
 r
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+toggle
+that
+adds
+a
+shortcut
+to
+the
+site
+on
+the
+device
+home
+screen
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_add_to_homescreen_2
+"
+>
+Cuir
+ris
+an
+sgr
+n
+-
+dhachaigh
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+notifying
+users
+that
+Xiaomi
+devices
+require
+additional
+permissions
+to
+add
+to
+home
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_add_to_homescreen_xiaomi
+"
+>
+Dh
+fhaoidte
+gum
+feum
+uidheaman
+Xiaomi
+ceadan
+a
+bharrachd
+mus
+urrainn
+dhut
+ath
+-
+ghoiridean
+a
+chur
+ris
+an
+sgr
+n
+-
+dhachaigh
+.
+Thoir
+s
+il
+air
+na
+roghainnean
+.
 <
 /
 string
@@ -3614,6 +4437,115 @@ Browser
 menu
 button
 that
+opens
+the
+find
+in
+page
+menu
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_find_in_page_2
+"
+>
+Lorg
+san
+duilleag
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
+opens
+the
+translations
+dialog
+which
+has
+options
+to
+translate
+the
+current
+browser
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_translations
+"
+>
+Eadar
+-
+theangaich
+an
+duilleag
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
+saves
+the
+current
+tab
+to
+a
+collection
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_save_to_collection
+"
+>
+S
+bhail
+ann
+an
+cruinneachadh
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
 saves
 the
 current
@@ -3667,6 +4599,41 @@ name
 =
 "
 browser_menu_share
+"
+>
+Co
+-
+roinn
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
+open
+a
+share
+menu
+to
+share
+the
+current
+site
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_share_2
 "
 >
 Co
@@ -4003,6 +4970,49 @@ string
 -
 Browser
 menu
+button
+to
+show
+reader
+view
+appearance
+controls
+e
+.
+g
+.
+the
+used
+font
+type
+and
+size
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_customize_reader_view_2
+"
+>
+Gn
+thaich
+sealladh
+an
+leughadair
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
 label
 for
 adding
@@ -4085,6 +5095,476 @@ an
 duilleag
 -
 dhachaigh
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+label
+to
+sign
+in
+to
+sync
+on
+the
+device
+using
+Mozilla
+accounts
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_sign_in
+"
+>
+Cl
+raich
+a
+-
+steach
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+caption
+label
+for
+the
+"
+Sign
+in
+"
+browser
+menu
+item
+described
+in
+browser_menu_sign_in
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_sign_in_caption
+"
+>
+Sioncronaich
+faclan
+-
+faire
+tabaichean
+is
+m
+ran
+a
+bharrachd
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+label
+to
+sign
+back
+in
+to
+sync
+on
+the
+device
+when
+the
+user
+'
+s
+account
+needs
+to
+be
+reauthenticated
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_sign_back_in_to_sync
+"
+>
+Cl
+raich
+a
+-
+steach
+a
+-
+rithist
+a
+dh
+anamh
+sioncronachadh
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+caption
+label
+for
+the
+"
+Sign
+back
+in
+to
+sync
+"
+browser
+menu
+item
+described
+in
+browser_menu_sign_back_in_to_sync
+when
+there
+is
+an
+error
+in
+syncing
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_syncing_paused_caption
+"
+>
+Tha
+an
+sioncronachadh
+na
+stad
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+label
+that
+creates
+a
+private
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_new_private_tab
+"
+>
+Taba
+pr
+obhaideach
+r
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+label
+that
+navigates
+to
+the
+Password
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_passwords
+"
+>
+Faclan
+-
+faire
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+label
+that
+navigates
+to
+the
+SUMO
+page
+for
+the
+Firefox
+for
+Android
+release
+notes
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+defined
+in
+app_name
+(
+for
+example
+:
+Fenix
+)
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_new_in_firefox
+"
+>
+r
+ann
+am
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+label
+that
+toggles
+the
+request
+for
+the
+desktop
+site
+of
+the
+currently
+visited
+page
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_switch_to_desktop_site
+"
+>
+Seall
+an
+l
+rach
+desktop
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+label
+that
+toggles
+the
+request
+for
+the
+mobile
+site
+of
+the
+currently
+visited
+page
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_switch_to_mobile_site
+"
+>
+Seall
+an
+l
+rach
+mobile
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+label
+that
+navigates
+to
+the
+page
+tools
+sub
+-
+menu
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_tools
+"
+>
+Innealan
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Back
+button
+for
+all
+menu
+redesign
+sub
+-
+menu
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_back_button_content_description
+"
+>
+Air
+ais
+gun
+phr
+omh
+-
+chl
+r
+-
+taice
 <
 /
 string
